team members in aboutPage is centered, added header button functionality, fixed footer layout issue.

--- a/Frontend/Styles/aboutPage.css
+++ b/Frontend/Styles/aboutPage.css
@@ -5,14 +5,17 @@ body {
     background-color: #f0f2f5;
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Tüm sayfa yüksekliği */
 }
 
 /* Ana içerik stilleri */
 .content {
+    display: flex;
+    flex-direction: column;
     flex: 1; /* İçerik alanını esnek yaparak sayfanın kalanını doldur */
     padding: 20px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 h2 {
@@ -26,14 +29,13 @@ h2 {
     justify-content: center;
     align-items: center;
     align-content: center;
-
     flex-wrap: wrap;
     gap: 20px;
 }
 
 .team-member {
-    background-color: #ffffff;
-    border-radius: 8px;
+    background-color: #EBEBEB;
+    border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     text-align: center;
