--- a/Frontend/Styles/styles.css
+++ b/Frontend/Styles/styles.css
@@ -1,18 +1,14 @@
-/* Body ve html yüksekliği %100 yap */
+/* Genel body stilleri */
 html, body {
-    height: 100%;
     margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f0f2f5;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 
-/* İçerik esnek olarak boşluğu doldurur */
-.content {
-    flex: 1;  /* İçerik esnek olur ve kalan boş alanı doldurur */
-    padding: 20px;
-    background-color: #f5f5f5;
-}
 
 /* Footer Styles */
 .footer {
@@ -26,7 +22,7 @@ html, body {
 
 .footer-logo {
     width: 160px;
-    height: 65px;
+    height: 45px;
 }
 
 .copyright-text {
@@ -44,12 +40,13 @@ html, body {
 }
 
 .header img {
-    height: 50px;
+    height: 90px;
 }
 
 .header .nav-links {
     display: flex;
     align-items: center;
+    gap: 16px;
 }
 
 .header .nav-links a {
@@ -57,14 +54,25 @@ html, body {
     text-decoration: none;
     color: black;
     font-size: 16px;
+    
+}
+
+.header .nav-links a:hover{
+    text-decoration: underline;
 }
 
 .header .nav-links .btn {
-    padding: 10px 20px;
-    border-radius: 20px;
-    margin-left: 10px;
+    border-radius: 16px;
     border: none;
     cursor: pointer;
+    width: 130px;
+    height: 40px;
+    gap: 5px;
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
 }
 
 .title {
@@ -79,7 +87,8 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    gap: 10px;
+    gap: 14px;
+    cursor: pointer;
 }
 
 .header .nav-links .signin-btn {
